--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,17 @@
 /* variables declared here - these are the colors for our pages, as well as the font stacks and sizes. */
 :root {
-  --black: #0D0D0D;
-  --lgray: #D9D9D9;
+  --black: #0d0d0d;
+  --lgray: #d9d9d9;
   --dgray: #595856;
-  --midgray: #8C8B88;
-  --dteal: #00747C;
-  --lteal: #00BBC9;
+  --midgray: #8c8b88;
+  --dteal: #00747c;
+  --lteal: #00bbc9;
   --dkblue: #0d314b;
   --plum: #4b0d49;
   --hotmag: #ff17e4;
   --magenta: #e310cb;
   --aqua: #86fbfb;
-  --white: #F2F2F2;
+  --white: #f2f2f2;
   --font-size: 1.3rem;
   --mono: 'Oxygen mono', monospace;
   --sans: Oxygen, sans-serif;
@@ -45,23 +45,34 @@ a:hover {
   color: var(--lgray);
   text-decoration: none;
 }
+#myBtn {
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  width: 7.5%;
+}
 img {
-   width: 100%;
+  width: 100%;
 }
 .projectLogo {
-   width: 75%;
+  width: 75%;
 }
 /* background color divs */
 
 .section-plum {
-   background-color: var(--black);
+  background-color: var(--black);
 }
 .section-dkblue {
-   background-color: var(--black);
+  background-color: var(--black);
 }
 .gradient {
-  background: linear-gradient(90deg, rgba(13,13,13,1) 0%, rgba(242,242,242,1) 100%);
-   height: 2px;
+  background: linear-gradient(
+    90deg,
+    rgba(13, 13, 13, 1) 0%,
+    rgba(242, 242, 242, 1) 100%
+  );
+  height: 2px;
 }
 
 /* intro styles */
@@ -173,80 +184,79 @@ footer ul {
 
 /* Projects section */
 #projects {
-   padding: 4rem 1rem;
+  padding: 4rem 1rem;
 }
 #projects h2 {
-   font-size: 2.5rem;
-   margin-bottom: calc(2.5rem * 1.5);
+  font-size: 2.5rem;
+  margin-bottom: calc(2.5rem * 1.5);
 }
 #projects h3 {
-   color: var(--midgray);
+  color: var(--midgray);
 }
 #projects h4 {
-   font-size: 1rem;
-   font-family: var(--mono);
-   margin: 0;
+  font-size: 1rem;
+  font-family: var(--mono);
+  margin: 0;
 }
 .blackbox {
-   background-color: var(--black);
-   padding: 1rem;
-   border-radius: 10px;
-   color: var(--white);
-   font-size: 1rem;
-   line-height: 1.5;
+  background-color: var(--black);
+  padding: 1rem;
+  border-radius: 10px;
+  color: var(--white);
+  font-size: 1rem;
+  line-height: 1.5;
 }
 #projects ul {
-   list-style-type: none;
-   padding: 0;
-   margin: 0;
-   display: flex;
-   flex-flow: row wrap;
-   justify-content: flex-start;
-   gap: 1rem;
-   font-size: 1rem;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  gap: 1rem;
+  font-size: 1rem;
 }
 #projects img {
-   margin: 2rem 0 4rem 0;
-   border-left: 1px solid var(--midgray);
-   border-top: 1px solid var(--midgray);
-   border-radius: 25px;
-   padding: 1rem;
-   
+  margin: 2rem 0 4rem 0;
+  border-left: 1px solid var(--midgray);
+  border-top: 1px solid var(--midgray);
+  border-radius: 25px;
+  padding: 1rem;
 }
 @media (min-width: 800px) {
-   article {
-      display: grid;
-      grid-template-columns: repeat(10, 1fr);
-   }
-   #projects {
-      max-width: 1200px;
-      margin: 0 auto;
-   }
-   #projects img {
-      grid-column: 1/6;
-      grid-row: 1/2;
-   }
-   .text {
-      grid-column: 5/11;
-      grid-row: 1/2;
-      order: 2;
-      text-align: right;
-   }
-   #projects ul {
-      justify-content: flex-end;
-   }
-   #projects .reverse .text {
-      grid-column: 1/7;
-      order: 2;
-      text-align: left;
-   }
-   #projects .reverse img {
-      grid-column: 6/11;
-      grid-row: 1/2;
-   }
-   #projects .reverse ul {
-      justify-content: flex-start;
-   }
+  article {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+  }
+  #projects {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  #projects img {
+    grid-column: 1/6;
+    grid-row: 1/2;
+  }
+  .text {
+    grid-column: 5/11;
+    grid-row: 1/2;
+    order: 2;
+    text-align: right;
+  }
+  #projects ul {
+    justify-content: flex-end;
+  }
+  #projects .reverse .text {
+    grid-column: 1/7;
+    order: 2;
+    text-align: left;
+  }
+  #projects .reverse img {
+    grid-column: 6/11;
+    grid-row: 1/2;
+  }
+  #projects .reverse ul {
+    justify-content: flex-start;
+  }
 }
 @media (min-width: 800px) {
   nav {
