--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ img {
 /* Contact section */
 
 #contact {
-  width: 400px;
+  /* width: 400px; */
   text-align: center;
   margin: 0 auto;
   padding: 4rem 0;
